basic/content-app/web-ingress-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: content-web
    env: green
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: Prefix
#    host: <myserviceuniquelabel>.<location>.cloudapp.azure.com  # Leave this line commented out until Part 2b
